--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.17.2",
         "express-mongo-sanitize": "^2.2.0",
         "express-session": "^1.17.2",
+        "geolocation": "^0.2.0",
         "helmet": "^5.0.2",
         "joi": "^17.5.0",
         "method-override": "^3.0.0",
